--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
       <div id="map"></div>
     </div>
     <script src="js/lib/knockout-3.2.0.js"></script>
+    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
     <script src="js/app.js"></script>
     <script async defer
         src=
-        "https://maps.googleapis.com/maps/api/js?key=YOURKEY&libraries=geometry&v=3&callback=initMap">
+        "https://maps.googleapis.com/maps/api/js?key=yourkey&libraries=geometry&v=3&callback=initMap">
     </script>
   </body>
 </html>
