--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <script src="js/app.js"></script>
     <script async defer
         src=
-        "https://maps.googleapis.com/maps/api/js?key=yourkey&libraries=geometry&v=3&callback=initMap">
+        "https://maps.googleapis.com/maps/api/js?key=yourkey&libraries=geometry&v=3&callback=initMap"
+        onerror="mapErrorHandler()">
     </script>
   </body>
 </html>
